manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "remainders-demo"
  labels:
    name: "remainders-demo"
