manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remainders-backend
  namespace: remainders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remainders-backend
  template:
    metadata:
      labels:
        app: remainders-backend
    spec:
      containers:
        - name: remainders-backend
          image: pasiol/remainders-backend:latest
          resources:
            limits:
              cpu: "15m"
              memory: "10Mi"
