manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:
  remainders-backend-svc
  namespace: remainders
spec:
  type: ClusterIP
  selector:
    app: remainders-backend
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
