manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remainders-backend-ingress
  namespace: remainders
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: remainders-backend-svc
                port:
                  number: 8888
